@@ -52,6 +52,7 @@ void on_bookmark_open( GtkMenuItem* item, PtkFileBrowser* file_browser );
 void on_bookmark_open_tab( GtkMenuItem* item, PtkFileBrowser* file_browser );
 
 void mount_network( PtkFileBrowser* file_browser, const char* url );
+void mount_iso( PtkFileBrowser* file_browser, const char* path );
 
 G_END_DECLS
 
