@@ -1,9 +1,12 @@
 0.7.7+
     use/update mimeapps.list over defaults.list closes #71
-    added design mode on mime apps opens editor menu
+    added design mode on mime apps opens MIME menu
     deprecated MimeType x-directory removed from spacefm desktop files
     new archive save dialog uses literal filename and extension fixes #82
     accept options in terminal program setting
+    added user manual MIME Menu section
+    accept network urls
+    mount iso files from Open context menu; auto-mount iso
 0.7.7   2012-05-27:
     escape mount point in dev props scripts fixes #70
     fixed File|File Search keybinding
